--- a/style.css
+++ b/style.css
@@ -297,7 +297,7 @@ svg {
     flex-direction: row;
   }
   .para{
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-between;
   }
   .log-section {
