--- a/style.css
+++ b/style.css
@@ -193,6 +193,8 @@ svg {
   align-items: center;
   justify-content: space-between;
   padding: 1rem;
+  padding-left: 0%;
+  padding-right: 0%;
   margin-right: 15px;
   margin-left: 15px;
 }
