--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 /* ===============================
    Root Theme Variables
 ================================= */
+
+/* =======================
+   styles for home page
+   ===================== */
 *{
     box-sizing: border-box;
 }
@@ -343,9 +347,27 @@ svg {
     color: #2ecc71;
 }
 
+/* ==============================
+   syles for log.html
+   =========================== */
+
+   /* ==============================
+   syles for plan.html
+   =========================== */
+   /* ==============================
+   syles for community.html
+   =========================== */
+   /* ==============================
+   syles for report.html
+   =========================== */
+
+
 /* ===============================
    Responsive Design
 ================================= */
+/* ================================
+          media queries for homepage 
+          ======================*/
 @media (min-width: 600px) {
   .main-section {
     flex-direction: row;
@@ -382,3 +404,17 @@ svg {
 }
 
 }
+
+/* ================================
+          media queries for log 
+          ======================*/
+          /* ================================
+          media queries for plan 
+          ======================*/
+
+        /* ================================
+          media queries for community
+          ======================*/
+          /* ================================
+          media queries for report 
+          ======================*/
