made changes to the co2-emission

--- a/style.css
+++ b/style.css
@@ -478,6 +478,9 @@ svg {
 .log-btn{
     background-color: rgb(237, 236, 236);
 }
+.co2-emission{
+    font-size: 11.5px;
+}
 
 
    /* ==============================
