--- a/style.css
+++ b/style.css
@@ -530,6 +530,44 @@ svg {
 .co2-emission{
     font-size: 11.5px;
 }
+.food-challenge{
+         background-image: url(/images/green\ 1.jpg);
+     background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  border-radius: 15px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+  padding: 1rem;
+  margin: 20px auto;
+  margin-top: 150px;
+  width: 90%;
+  height: 36vh;
+  max-width: 450px;
+  z-index: 1;
+    position: relative;
+    overflow: hidden;
+    color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+}
+.food-challenge::before{
+    content: "";
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5); /* dark overlay */
+  z-index: 0;
+}
+.food-challenge > * {
+  position: relative;
+  z-index: 5; /* place content above overlay */
+}
+.food-challenge p{
+ font-style: italic;   
+}
 
 
    /* ==============================
