--- a/style.css
+++ b/style.css
@@ -530,7 +530,7 @@ svg {
 .co2-emission{
     font-size: 11.5px;
 }
-.food-challenge{
+/* .food-challenge{
          background-image: url(/images/green\ 1.jpg);
      background-size: cover;
   background-repeat: no-repeat;
@@ -559,16 +559,37 @@ svg {
   position: absolute;
   top: 0; left: 0; right: 0; bottom: 0;
   background-color: rgba(0, 0, 0, 0.5); /* dark overlay */
-  z-index: 0;
-}
-.food-challenge > * {
+  /* z-index: 0;
+} */
+/* .food-challenge > * {
   position: relative;
   z-index: 5; /* place content above overlay */
-}
+/* }
 .food-challenge p{
  font-style: italic;   
+} */ 
+ .addition{
+    max-width: 450px;
+    width: 100%;
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+    
+    padding: 1rem;
+ }
+.the-image{
+ height: 85%;
+ width: 98%;
+ border-radius: 20px;
+  
 }
-
+.the-text{
+ font-size: 13px;
+ 
+}
 
    /* ==============================
    syles for plan.html
