--- a/style.css
+++ b/style.css
@@ -568,6 +568,10 @@ svg {
 .food-challenge p{
  font-style: italic;   
 } */ 
+
+.empty-space{
+    height: 100px;
+}
  .addition{
     max-width: 500px;
     width: 100%;
@@ -576,8 +580,7 @@ svg {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 100px;
-    
+    margin-top: 24px;
     padding: 1rem;
  }
 .the-image{
