--- a/style.css
+++ b/style.css
@@ -100,7 +100,10 @@ body.dark .percentage-increase .the-p{
 }
 
 .logo img {
-  height: 48px;
+   height: 100px;
+  width: auto;
+  display: block;
+  
 }
 
 .toggle-container {
@@ -108,6 +111,16 @@ body.dark .percentage-increase .the-p{
   top: 10px;
   right: 20px;
 }
+.toggle-container button{
+      background-color: #f0f0f0;
+  border: none;
+  padding: 8px 14px;
+  border-radius: 6px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: background 0.3s ease;
+}
+
 
 #theme-toggle {
   padding: 8px 14px;
