--- a/style.css
+++ b/style.css
@@ -93,7 +93,6 @@ body.dark .percentage-increase .the-p{
 ================================= */
 .dashboard-header {
   width: 100%;
-  padding: 1rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -103,11 +102,10 @@ body.dark .percentage-increase .the-p{
    height: 100px;
   width: auto;
   display: block;
-  
+  padding: 0px;
 }
 
 .toggle-container {
-  position: absolute;
   top: 10px;
   right: 20px;
 }
