--- a/style.css
+++ b/style.css
@@ -96,7 +96,8 @@ body.dark .percentage-increase .the-p{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+  margin-top: -25px;
 }
 
 .logo img {
