--- a/style.css
+++ b/style.css
@@ -96,14 +96,15 @@ body.dark .percentage-increase .the-p{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   margin-top: -25px;
 }
 
 .logo img {
-   height: 100px;
+   height: 120px;
   width: auto;
   display: block;
+  margin-left: -20px;
   
 }
 
