--- a/style.css
+++ b/style.css
@@ -581,6 +581,7 @@ svg {
    =========================== */
    .action-section-one {
          margin: 0 auto;
+         margin-left: 5px;
          width: 100%;
          max-width: 500px;
    }
@@ -588,9 +589,11 @@ svg {
     font-size: 14px;
     color: grey;
     margin-top: -10px;
+    margin-left: 5px;
    }
    .header{
       font-weight: 800;
+      margin-left: 5px;
        margin: 0 auto;
          width: 100%;
          max-width: 500px;
@@ -659,6 +662,7 @@ svg {
          width: 100%;
          max-width: 500px;
          margin-bottom: -15px;
+         margin-left: 5px;
 }
 .badge-section{
   width: 100%;
@@ -667,6 +671,7 @@ svg {
   flex-direction: column;
   gap: 1rem;
   margin-top: 10px;
+  margin-left: 5px;
 }
 
    /* ==============================
