--- a/public/css/the login style.css
+++ b/public/css/the login style.css
@@ -1,149 +1,268 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
-  font-family: "Poppins";
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  text-decoration: none;
+  list-style: none;
 }
 
 body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #0c0c0c;
   min-height: 100vh;
+  background-image: url('public/assets/images/login.png');
+   background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .container {
   position: relative;
-  width: 256px;
-  height: 256px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  width: 850px;
+  height: 550px;
+  background: #fff;
+  margin: 20px;
+  border-radius: 30px;
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
 }
 
-.container span {
-  position: absolute;
-  left: 0;
-  width: 32px;
-  height: 6px;
-  background: #2c4766;
-  border-radius: 8px;
-  transform-origin: 128px;
-  transform: scale(2.2) rotate(calc(var(--i) * (360deg / 50)));
-  animation: animateBlink 3s linear infinite;
-  animation-delay: calc(var(--i) * (3s / 50));
+.container h1 {
+  font-size: 36px;
+  margin: -10px 0;
 }
 
-@keyframes animateBlink {
-  0% {
-    background: rgb(8, 243, 78);
-  }
-
-  25% {
-    background: #2d3238;
-  }
+.container p {
+  font-size: 14.5px;
+  margin: 15px 0;
 }
 
-.login-box {
-  position: absolute;
-  width: 350px;
-}
-
-.login-box form {
+form {
   width: 100%;
-  padding: 0 50px;
 }
 
-h2 {
-  font-size: 2em;
-  color: rgb(0, 255, 81);
+.form-box {
+  position: absolute;
+  right: 0;
+  width: 50%;
+  height: 100%;
+  background: #fff;
+  display: flex;
+  align-items: center;
+  color: #333;
   text-align: center;
+  padding: 40px;
+  z-index: 1;
+  transition:
+    0.6s ease-in-out 1.2s,
+    visibility 0s 1s;
 }
+
+.container.active .form-box {
+  right: 50%;
+}
+
+.form-box.register {
+  visibility: hidden;
+}
+.container.active .form-box.register {
+  visibility: visible;
+}
+
 .input-box {
   position: relative;
-  margin: 25px 0;
+  margin: 30px 0;
 }
 
 .input-box input {
   width: 100%;
-  height: 50px;
-  background: transparent;
-  border: 2px solid #2c4766;
+  padding: 13px 50px 13px 20px;
+  background: #eee;
+  border-radius: 8px;
+  border: none;
   outline: none;
-  border-radius: 40px;
-  font-size: 1em;
-  color: #fff;
-  padding: 0 20px;
-  transition: 0.5s;
+  font-size: 16px;
+  color: #333;
+  font-weight: 500;
 }
 
-.input-box input:focus,
-.input-box input:valid {
-  border-color: rgb(11, 227, 47);
+.input-box input::placeholder {
+  color: #888;
+  font-weight: 400;
 }
 
-.input-box label {
+.input-box i {
   position: absolute;
+  right: 20px;
   top: 50%;
-  left: 20px;
   transform: translateY(-50%);
-  font-size: 1em;
-  color: #fff;
-  pointer-events: none;
-  transition: 0.5s ease;
+  font-size: 20px;
 }
 
-.input-box input:focus ~ label,
-.input-box input:valid ~ label {
-  top: 1px;
-  font-size: 0.8em;
-  background-color: #1f293a;
-  padding: 0 6px;
-  color: rgb(13, 247, 44);
+.forgot-link {
+  margin: -15px 0 15px;
 }
-
-.forgot-password {
-  margin: -15px 0 10px;
-  text-align: center;
-}
-
-.forgot-password a {
-  font-size: 0.85em;
-  color: #fff;
-  text-decoration: none;
-}
-
-.forgot-password a:hover {
-  text-decoration: underline;
+.forgot-link a {
+  font-size: 14.5px;
+  color: #333;
 }
 
 .btn {
   width: 100%;
-  height: 45px;
-  border-radius: 45px;
-  background: rgb(0, 255, 17);
+  height: 48px;
+  background: #7494ec;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border: none;
-  outline: none;
   cursor: pointer;
-  font-size: 1em;
-  color: #1f293a;
+  font-size: 16px;
+  color: #fff;
   font-weight: 600;
 }
 
-.signup-link {
-  margin: 20px 0 10px;
-  text-align: center;
+.social-icons {
+  display: flex;
+  justify-content: center;
 }
 
-.signup-link a {
-  font-size: 1em;
-  color: rgb(0, 255, 47);
-  text-decoration: none;
-  font-weight: 600;
+.social-icons a {
+  display: inline-flex;
+  padding: 10px;
+  border: 2px solid #ccc;
+  border-radius: 8px;
+  font-size: 24px;
+  color: #333;
+  margin: 0 8px;
 }
 
-.signup-link a:hover {
-  text-decoration: underline;
+.toggle-box {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.toggle-box::before {
+  content: "";
+  position: absolute;
+  left: -250%;
+  width: 300%;
+  height: 100%;
+  background: #09da39;
+  /* border: 2px solid red; */
+  border-radius: 150px;
+  z-index: 2;
+  transition: 1.8s ease-in-out;
+}
+
+.container.active .toggle-box::before {
+  left: 50%;
+}
+
+.toggle-panel {
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  /* background: seagreen; */
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+  transition: 0.6s ease-in-out;
+}
+
+.toggle-panel.toggle-left {
+  left: 0;
+  transition-delay: 1.2s;
+}
+.container.active .toggle-panel.toggle-left {
+  left: -50%;
+  transition-delay: 0.6s;
+}
+
+.toggle-panel.toggle-right {
+  right: -50%;
+  transition-delay: 0.6s;
+}
+.container.active .toggle-panel.toggle-right {
+  right: 0;
+  transition-delay: 1.2s;
+}
+
+.toggle-panel p {
+  margin-bottom: 20px;
+}
+
+.toggle-panel .btn {
+  width: 160px;
+  height: 46px;
+  background: transparent;
+  border: 2px solid #fff;
+  box-shadow: none;
+}
+
+@media screen and (max-width: 650px) {
+  .container {
+    height: calc(100vh - 40px);
+  }
+
+  .form-box {
+    bottom: 0;
+    width: 100%;
+    height: 70%;
+  }
+
+  .container.active .form-box {
+    right: 0;
+    bottom: 30%;
+  }
+
+  .toggle-box::before {
+    left: 0;
+    top: -270%;
+    width: 100%;
+    height: 300%;
+    border-radius: 20vw;
+  }
+
+  .container.active .toggle-box::before {
+    left: 0;
+    top: 70%;
+  }
+
+  .container.active .toggle-panel.toggle-left {
+    left: 0;
+    top: -30%;
+  }
+
+  .toggle-panel {
+    width: 100%;
+    height: 30%;
+  }
+  .toggle-panel.toggle-left {
+    top: 0;
+  }
+  .toggle-panel.toggle-right {
+    right: 0;
+    bottom: -30%;
+  }
+
+  .container.active .toggle-panel.toggle-right {
+    bottom: 0;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .form-box {
+    padding: 20px;
+  }
+
+  .toggle-panel h1 {
+    font-size: 30px;
+  }
 }
