--- a/public/css/the login style.css
+++ b/public/css/the login style.css
@@ -14,12 +14,12 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-image: url('public/assets/images/login.png');
+ background: linear-gradient(90deg, #4CAF50, #81C784);
+
    background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
-
 .container {
   position: relative;
   width: 850px;
@@ -114,7 +114,7 @@ form {
 .btn {
   width: 100%;
   height: 48px;
-  background: #7494ec;
+  background: #0beb1d;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border: none;
